--- a/musicPlayer/templates/music_app/playlist.html
+++ b/musicPlayer/templates/music_app/playlist.html
@@ -3,6 +3,37 @@
 
 {% block content %}
 
-    <h1>This is playlist page</h1>
+    <div class="container music-container">
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-md-5">
+                <img src="{% static 'images/bad-liar.jpg' %}" alt="" class="song-image">
+            </div>
+            <div class="col-md-7">
+                <h2><strong>Bad Liar</strong></h2>
+                <h5><strong>Artist: Coldplay</strong></h5>
+                <div class="audio-playlist">
+                    <audio controls>
+                        <source src="" type="audio/,pg">
+                    </audio>
+                    <button class="btn btn-outline-danger">remove</button>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-md-5">
+                <img src="{% static 'images/bad-liar.jpg' %}" alt="" class="song-image">
+            </div>
+            <div class="col-md-7">
+                <h2><strong>Bad Liar</strong></h2>
+                <h5><strong>Artist: Coldplay</strong></h5>
+                <div class="audio-playlist">
+                    <audio controls>
+                        <source src="" type="audio/,pg">
+                    </audio>
+                    <button class="btn btn-outline-danger">remove</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
