feat: add search functionality by title

--- a/musicPlayer/templates/music_app/base.html
+++ b/musicPlayer/templates/music_app/base.html
@@ -41,8 +41,8 @@
                 <a class="nav-link active" href="{% url 'playlist' %}">Playlist</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" action="{% url 'music' %}">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
