--- a/musicPlayer/static/css/style.css
+++ b/musicPlayer/static/css/style.css
@@ -20,8 +20,25 @@
 }
 
 .row-song {
-    box-shadow:hsl(0, 0%, 80%) 0 0 16px;;
+    box-shadow:hsl(0, 0%, 80%) 0 0 16px;
     border-radius: 20px;
     margin-top: 20px;
     padding: 8px;
+}
+
+.form-register {
+    width: 500px;
+    box-shadow: hsl(0, 0%, 80%) 0 0 16px;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.auth-check {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.auth-check a {
+    text-decoration: none;
+    color: white;
 }
