--- a/musicPlayer/templates/music_app/base.html
+++ b/musicPlayer/templates/music_app/base.html
@@ -41,6 +41,16 @@
                 <a class="nav-link active" href="{% url 'playlist' %}">Playlist</a>
               </li>
             </ul>
+            {% if user.is_authenticated %}
+            <div class="d-inline-block auth-check">
+              <a href="{% url 'logout' %}">Logout</a>
+            </div>
+            {% else %}
+            <div class="d-inline-block auth-check">
+              <a href="{% url 'login' %}">Login |</a>
+              <a href="{% url 'register' %}">Register</a>
+            </div>
+            {% endif %}
             <form class="d-flex" action="{% url 'music' %}">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
               <button class="btn btn-outline-success" type="submit">Search</button>
